--- a/index.html
+++ b/index.html
@@ -54,10 +54,38 @@
                 Mi nombre es Luis Daniel Domingos Gomes, soy estudiante de la universidad metropolitana de Caracas, por el momento me encuentro en el octavo trimestre de la carrera de Ingenieria de Sistemas. Mi objetivo principal del momento es graduarme con la mayor nota posible; a largo plazo me gustaría poder trabajar en una compañia grande, dejar mi huella en ella y poder ser recordado en el futuro. En los momentos que no estoy estudiando me gusta leer novelas de ciencia ficcion al estilo de la saga Mistborne. 
             </p>
         </div>
+
+
         <div class="contenedor sombra">
             <h1 class="experiencia" id="experiencia">
                 Experiencia
             </h1>
+        <div class="programas">
+            <section class="programa">
+                <h2>Blog cafe</h2>
+                <a href="">
+                    <img src="img/carrusel1.png" class="img_main">
+                </a>
+                <p>Página realizada en el 2022 mientras realizaba un curso por udemy</p>
+            </section>
+
+            <section class="programa">
+                <h2>Bienes Raices</h2>
+                <a href="">
+                    <img src="img/Carrusel3.png" class="img_main">
+                </a>
+                <p>Página realizada en el 2022 mientras realizaba un curso por udemy</p>
+            </section>
+
+            <section class="programa">
+                <h2>Primer programa</h2>
+                <a href="https://lineadecodigo.com/html/imagen-con-enlace-en-html/">
+                    <img src="img/Primer programa.png" class="img_main">
+                </a>
+                <p>Página realizada en el 2022 mientras realizaba un curso por udemy</p>
+            </section>
+        </div>
+
         </div>
         <div class="contenedor sombra">
             <h1 class="skills" id="skills">
