--- a/index.html
+++ b/index.html
@@ -91,6 +91,10 @@
             <h1 class="skills" id="skills">
                 Skills
             </h1>
+            <div class="skill" id="skill">
+
+
+            </div>
         </div>
         <div class="contenedor sombra">
             <h1 class="contactame" id="contactame">
